# docs/swagger.json
@@ -75,11 +75,8 @@
                     }
                 ],
                 "description": "Возвращает изображение по ID.",
-                "consumes": [
-                    "multipart/form-data"
-                ],
                 "produces": [
-                    "application/json"
+                    "application/octet-stream"
                 ],
                 "tags": [
                     "Image"
@@ -87,25 +84,25 @@
                 "summary": "Получить изображение по ID.",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Image ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "type": "string",
                         "description": "'Bearer _YOUR_TOKEN_'",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Image ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Image received",
                         "schema": {
-                            "$ref": "#/definitions/models.Image"
+                            "type": "file"
                         }
                     },
                     "400": {
@@ -470,9 +467,55 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Your token",
+                        "description": "JWT tokens",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.TokenResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/refresh": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer Authentication": []
+                    }
+                ],
+                "description": "Обновляет токен досутпа с помощью токена обновления.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Обновление доступа.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "'Bearer refresh_token'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JWT tokens",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.TokenResponse"
                         }
                     },
                     "401": {
@@ -492,15 +535,14 @@
         }
     },
     "definitions": {
-        "models.Image": {
+        "handlers.TokenResponse": {
             "type": "object",
             "properties": {
-                "filename": {
-                    "type": "string",
-                    "example": "Image.jpg"
+                "accessToken": {
+                    "type": "string"
                 },
-                "id": {
-                    "type": "integer"
+                "refreshToken": {
+                    "type": "string"
                 }
             }
         },
