# handlers/login.go
@@ -1,16 +1,17 @@
 package handlers
 
 import (
-	"github.com/golang-jwt/jwt/v5"
 	"github.com/labstack/echo/v4"
-	"go-api/configs"
 	"go-api/logger"
 	"go-api/utils"
 	"go.uber.org/zap"
 	"net/http"
-	"os"
-	"time"
 )
+
+type TokenResponse struct {
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
 
 // LoginHandler
 // @Summary Авторизация.
@@ -19,7 +20,7 @@ import (
 // @Produce json
 // @Param username formData string true "Username"
 // @Param password formData string true "Password"
-// @Success 200 {string} string "Your token"
+// @Success 200 {object} TokenResponse "JWT tokens"
 // @Failure 401 {object} utils.Error
 // @Failure 500 {object} utils.Error
 // @Router /login [post]
@@ -31,23 +32,15 @@ func LoginHandler(c echo.Context) error {
 		logger.Error("failed to authorized", zap.Error(echo.ErrUnauthorized))
 		return c.JSON(http.StatusUnauthorized, utils.Error{Message: "failed to authorized"})
 	}
-	isAdmin := true
 
-	claims := &configs.JwtClaims{
-		Name:  username,
-		Admin: isAdmin,
-		RegisteredClaims: jwt.RegisteredClaims{
-			ExpiresAt: jwt.NewNumericDate(time.Now().Add(time.Hour * 72)),
-		},
-	}
-
-	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
-
-	t, err := token.SignedString([]byte(os.Getenv("JWT_SECRET")))
+	accessToken, refreshToken, err := utils.GenerateTokens(username)
 	if err != nil {
-		logger.Error("failed to encode JWT", zap.Error(err))
-		return c.JSON(http.StatusInternalServerError, utils.Error{Message: err.Error()})
+		logger.Error("Failed to generate tokens", zap.Error(err))
+		return c.JSON(http.StatusInternalServerError, utils.Error{Message: "Failed to generate tokens"})
 	}
 
-	return c.JSON(http.StatusOK, echo.Map{"token": t})
+	return c.JSON(http.StatusOK, TokenResponse{
+		AccessToken:  accessToken,
+		RefreshToken: refreshToken,
+	})
 }
